# fiora

./: .gitignore  Cargo.toml  README.md  env.example  request.http
src/: main.rs
src/common/: errors.rs  responses.rs
src/configuration/: mod.rs
src/container/: mod.rs
src/data/: mod.rs
src/data/infra/: psql.rs
src/data/repo/: mod.rs
src/data/repo/book/: data_store.rs  entity.rs  mod.rs  repository.rs
src/data/repo/borrowed/: entity.rs  mod.rs
src/data/repo/user/: data_store.rs  entity.rs  mod.rs  repository.rs  user_data_store.rs  user_entity.rs
src/domain/book/: mod.rs
src/domain/user/: mod.rs  user_model.rs  user_service.rs
src/interactor/: mod.rs
src/interactor/auth/: intr.rs  model.rs
src/interactor/book/: book_model.rs
src/interactor/borrowing/: mod.rs
src/interactor/user/: intr.rs  mod.rs  model.rs  user_model.rs  user_service.rs
src/protocol/http/: mod.rs  server.rs
src/protocol/http/middleware/: mod.rs  request.rs
src/protocol/http/user/: user_handler.rs
src/protocol/http/user/dto/: mod.rs
src/server/http/: mod.rs  server.rs
src/server/http/middleware/: mod.rs
src/server/http/user/: mod.rs  user_handler.rs
src/server/http/user/dto/: mod.rs
