[package]
name = "fiora"
version = "0.1.0"
edition = "2021"
authors = ["crownss"]
description = "simple aplikasi perpus rest api pada rust dan menggunakan hexagonal/ddd arsitektur dengan depensi injeksi dan implementasi clean code"
repository = "https://github.com/crownss/fiora"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
async-trait = "0.1.74"
async_once = "0.2.6"
bb8 = "0.8.1"
bb8-postgres = "0.8.1"
bcrypt = "0.15.0"
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
erased-serde = "0.3.31"
lazy_static = "1.4.0"
regex = "1.10.2"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.49"
tokio = { version = "1.33.0", features = ["full"] }
tokio-postgres = { version = "0.7.10", features = [
    "with-chrono-0_4",
    "with-uuid-1",
    "with-serde_json-1",
] }
tracing = "0.1.39"
tracing-subscriber = "0.3.17"
uuid = { version = "1.5.0", features = ["serde", "v4"] }
